--- a/contact.html
+++ b/contact.html
@@ -42,12 +42,13 @@
               <h2>Let's connect and find new ways for growth</h2>
             </div>
             <div class="form">
-                <form action="" method="post">
+                <form action="https://formspree.io/f/xldekbwa" method="post">
                   <input type="text" name="Full Name" placeholder="Your Name"><br>
                   <input type="email" name="Email ID" placeholder="Email"><br>
                   <input type="number" name="Phone Number" placeholder="Phone Number"><br>
                   <textarea name="Your Message" placeholder="Your Message"></textarea><br>
                   <button type="submit">Submit Now</button>
+                  <button type="reset">Reset Form</button>
                 </form>
             </div>
           </div>
