--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsive.css">
     <script
       src="https://kit.fontawesome.com/d3d61f5bb0.js"
       crossorigin="anonymous"
@@ -47,9 +48,9 @@
           optimize your operations, allowing you to focus on what matters
           most—growing your business.
         </p>
-        <button>
+        <a href="https://calendly.com/ammarkhanpur786/30min?month=2024-10&date=2024-10-31" target="_blank"><button>
           Book Consultation&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i>
-        </button>
+        </button></a>
       </div>
       <div class="imageDiv">
         <img
@@ -404,12 +405,13 @@
             <h2>Let's connect and find new ways for growth</h2>
           </div>
           <div class="form">
-              <form action="" method="post">
+              <form action="https://formspree.io/f/xldekbwa" method="post">
                 <input type="text" name="Full Name" placeholder="Your Name"><br>
                 <input type="email" name="Email ID" placeholder="Email"><br>
                 <input type="number" name="Phone Number" placeholder="Phone Number"><br>
                 <textarea name="Your Message" placeholder="Your Message"></textarea><br>
                 <button type="submit">Submit Now</button>
+                <button type="reset">Reset Form</button>
               </form>
           </div>
         </div>
@@ -457,7 +459,7 @@
         <p>Social</p>
         <ul>
           <a href=""><li>Instagram</li></a>
-          <a href=""><li>Linkedin</li></a>
+          <a href="https://www.linkedin.com/company/kaz-financial-solutions/"><li>Linkedin</li></a>
           <a href="https://wa.me/+918469302852"><li>Whatsapp</li></a>
         </ul>
       </div>
